--- a/packages/node-express/package.json
+++ b/packages/node-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-world-express",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "A quick tooled together application, used to demonstrate benefits of a monorepo alongside other projects",
   "main": "app.js",
   "scripts": {
@@ -9,11 +9,11 @@
   "author": "Brad Morton",
   "license": "ISC",
   "dependencies": {
+    "bm-personal-shared-resource": "^0.7.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "express": "^4.16.2",
-    "mocha": "^4.1.0",
-    "shared-resource": "^0.7.0"
+    "mocha": "^4.1.0"
   },
   "devDependencies": {
     "request": "^2.83.0"
